force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Category_Output__c.field-meta.xml
<CustomField>
    <fullName>Category_Output__c</fullName>
    <formula>SBQQ__ProductOption__r.SBQQ__Feature__r.SBQQ__ConfiguredSKU__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Output</label>
    <type>Text</type>
</CustomField>