force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ConfiguredPart__c.field-meta.xml
<CustomField>
    <fullName>ConfiguredPart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Continental Disc configured part.</description>
    <inlineHelpText>The Continental Disc configured part.</inlineHelpText>
    <label>Configured Part</label>
    <referenceTo>ConfiguredPart__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>