force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Document_Type_Output__c.field-meta.xml
<CustomField>
    <fullName>Document_Type_Output__c</fullName>
    <formula>SBQQ__ProductOption__r.SBQQ__Feature__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Type Output</label>
    <type>Text</type>
</CustomField>