force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Non_Discountable_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Non_Discountable_Total_Price__c</fullName>
    <label>Non Discountable Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>