force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Tank_Location__c.field-meta.xml
<CustomField>
    <fullName>Tank_Location__c</fullName>
    <label>Tank Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>