force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Tank_Name__c.field-meta.xml
<CustomField>
    <fullName>Tank_Name__c</fullName>
    <label>Tank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>