force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Lot_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Lot_Charge__c</fullName>
    <formula>SBQQ__NetTotal__c +  Non_Discountable_Total_Price__c +  Discountable_Total_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Lot Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>