force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Cannot_Edit_Discount_or_Discount_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Discount_or_Discount_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>(TEXT(SBQQ__Quote__r.SBQQ__Status__c) = &apos;Pending Approvals&apos; || TEXT(SBQQ__Quote__r.SBQQ__Status__c) = &apos;Approved&apos;||
TEXT(SBQQ__Quote__r.SBQQ__Status__c) = &apos;Order Submitted&apos;) &amp;&amp;
(Ischanged( Discount__c)  || Ischanged( Discount_Amount__c))</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>Discount % or Discount Amount values CANNOT be changed when Quote is Pending Approved or Approved</errorMessage>
</ValidationRule>