force-app/main/default/objects/SBQQ__QuoteLine__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SBQQ__Quote__c</columns>
    <columns>NAME</columns>
    <columns>Line_Status__c</columns>
    <columns>Commission_Amount__c</columns>
    <columns>Product_Planning_Status__c</columns>
    <columns>Engineering_Status__c</columns>
    <columns>Discountable_List_Price__c</columns>
    <columns>Non_Discountable_List_Price__c</columns>
    <columns>Net_Price_Each__c</columns>
    <columns>PARTNUMBER__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Sub_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>