force-app/main/default/objects/SBQQ__QuoteLine__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Line_Status__c</columns>
    <columns>Change_Order_Status__c</columns>
    <columns>Status_Reason__c</columns>
    <columns>SBQQ__Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>